Fixes para cloudflare pages

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gustos</title>
 </head>
 <body>
-    <p>LTI</p>
-    <p>Lorem ipsum <b>dolor</b> sit, amet consectetur adipisicing elit. Velit laboriosam quia ab dolore accusantium repellendus consequuntur rem hic fugiat praesentium laborum sunt aliquam ullam nisi assumenda aliquid quo, cumque rerum.</p>
-    <p>Test</p>
-    <h2>test</h2>
+    <h1>Gustos</h1>
+    <ul>
+        <li>Jugar videojuegos</li> 
+        <li>Leer</li>
+        <li></li>
+    </ul>
 </body>
 </html>
