Update hobbies list in index.html to include 'Armar cubos rubik' and 'Programar mis varios proyectos'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <ul>
         <li>Jugar videojuegos</li> 
         <li>Leer</li>
-        <li></li>
+        <li>Armar cubos rubik</li>
+        <li>Programar mis varios <a href="https://delg.dev">proyectos</a></li>
     </ul>
 </body>
 </html>
