Add link to Extras page in index.html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <li>Armar cubos rubik</li>
         <li>Programar mis varios <a href="https://delg.dev">proyectos</a></li>
     </ul>
+    <a href="/extra">Extras</a>
 </body>
 </html>
