Add image and video elements to 2nd.html for enhanced multimedia content

--- a/2nd.html
+++ b/2nd.html
@@ -19,6 +19,12 @@
     <mark>Mark</mark>
     <progress>Progress</progress>
     <meter value="50" max="100">Meter</meter>
+
+    <img src="https://picsum.photos/200/300" alt="Imagen aleatoria">
+    <video src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" controls></video>
+
+
+
     <a href="/">Volver</a>
 </body>
 </html>
